--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
     <title>Project1</title>
 </head>
 <body>
-    Hello, I am working. Hey whats up
+    Hello, I am working. Hey whats up. How are you?
 </body>
 </html>
