Updated Contact page and added About page

--- a/about.html
+++ b/about.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Home</title>
+    <title>About</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -21,13 +21,14 @@
         </nav>
         <a class="cta" href="contact.html"><button>Contact</button></a>
     </header>
-    <div class="main-background">
-        <div class="main-text">
-            <h1 id="home-header">Welcome to WeCoach</h1>
-            <h3 id="home-subheader">Unlock your true potential in the games you love most</h3>
-            <a href="about.html"><button id="start">Get Started</button></a>
+    <div class="about-background">
+        <div class="about-text">
+            <h2 id="about-h2">Our Mission</h2>
+            <h1 id="about-header">We want to help YOU improve at the games YOU love</h1>
+            <h3 id="about-h3">WeCoach is dedicated to helping players get better at video games and esports they love most</h3>
+            <a href=""><button id="learn-more">Learn More</button></a>
         </div>
     </div>
-
+    
 </body>
 </html>
