--- a/contact.html
+++ b/contact.html
@@ -14,16 +14,16 @@
         </a>
         <nav>
             <ul class="nav_links">
-                <li><a href="#">About</a></li>
-                <li><a href="#">Project</a></li>
-                <li><a href="#">Service</a></li>
+                <li><a href="about.html">About</a></li>
+                <li><a href="#">Services</a></li>
+                <li><a href="#">Countdown</a></li>
             </ul>
         </nav>
         <a class="cta" href="contact.html"><button>Contact</button></a>
     </header>
     <div class="contact">
         <form>
-          <h1 id="contactme">Contact Me</h1>
+          <h1 id="contactme">Contact Us</h1>
           <label for="fname">First Name</label>
           <input type="text" id="fname" name="fname" placeholder="John"/>
           <br />
