Organized Folders and Files; added Countdown

--- a/contact.html
+++ b/contact.html
@@ -5,21 +5,22 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contact</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="CSS/style.css">
+    <link rel="stylesheet" href="CSS/contact.css">
 </head>
 <body>
     <header>
         <a href="index.html">
-        <img class="logo" src="wrevor_badge_13.ico" alt="logo">
-        </a>
-        <nav>
-            <ul class="nav_links">
-                <li><a href="about.html">About</a></li>
-                <li><a href="#">Services</a></li>
-                <li><a href="#">Countdown</a></li>
-            </ul>
-        </nav>
-        <a class="cta" href="contact.html"><button>Contact</button></a>
+            <img class="logo" src="Images/wrevor_badge_13.ico" alt="logo">
+            </a>
+            <nav>
+                <ul class="nav-links">
+                    <li><a href="about.html">About</a></li>
+                    <li><a href="services.html">Services</a></li>
+                    <li><a href="countdown.html">Countdown</a></li>
+                </ul>
+            </nav>
+            <a class="cta" href="contact.html"><button>Contact</button></a>
     </header>
     <div class="contact">
         <form>
