--- a/services.html
+++ b/services.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>About</title>
+    <title>Services</title>
     <link rel="stylesheet" href="CSS/style.css">
-    <link rel="stylesheet" href="CSS/about.css">
+    <link rel="stylesheet" href="CSS/services.css">
 </head>
 <body>
     <header>
@@ -22,14 +22,5 @@
             </nav>
             <a class="cta" href="contact.html"><button>Contact</button></a>
     </header>
-    <div class="about-background">
-        <div class="about-text">
-            <h2 id="about-h2">Our Mission</h2>
-            <h1 id="about-header">We want to help YOU improve at the games YOU love</h1>
-            <h3 id="about-h3">WeCoach is dedicated to helping players get better at video games and esports they love most</h3>
-            <a href=""><button id="learn-more">Learn More</button></a>
-        </div>
-    </div>
-    
 </body>
 </html>
