Finished Services and Added Favicons

--- a/about.html
+++ b/about.html
@@ -7,6 +7,7 @@
     <title>About</title>
     <link rel="stylesheet" href="CSS/style.css">
     <link rel="stylesheet" href="CSS/about.css">
+    <link rel="icon shortcut" type="image/x-icon" href="Images/wrevor_badge_13.ico"/>
 </head>
 <body>
     <header>
@@ -27,7 +28,7 @@
             <h2 id="about-h2">Our Mission</h2>
             <h1 id="about-header">We want to help YOU improve at the games YOU love</h1>
             <h3 id="about-h3">WeCoach is dedicated to helping players get better at video games and esports they love most</h3>
-            <a href=""><button id="learn-more">Learn More</button></a>
+            <a href="services.html"><button id="learn-more">Learn More</button></a>
         </div>
     </div>
     
