--- a/countdown.html
+++ b/countdown.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="CSS/style.css">
     <link rel="stylesheet" href="CSS/countdown.css">
     <script src="Javascript/cdscript.js"defer></script> </script>
+    <link rel="icon shortcut" type="image/x-icon" href="Images/wrevor_badge_13.ico"/>
 </head>
 <body>
     <header>
@@ -25,6 +26,7 @@
     </header>
     <div class="countdown">
         <h1>Our Next MEGA SALE!</h1>
+        <h2>Buy 1 session, Get 1 FREE!</h2>
           <div class="countdown-el days-c">
               <p class="big-text" id=days>0</p>
               <span>days</span>
