--- a/services.html
+++ b/services.html
@@ -7,6 +7,7 @@
     <title>Services</title>
     <link rel="stylesheet" href="CSS/style.css">
     <link rel="stylesheet" href="CSS/services.css">
+    <link rel="icon shortcut" type="image/x-icon" href="Images/wrevor_badge_13.ico"/>
 </head>
 <body>
     <header>
@@ -22,5 +23,40 @@
             </nav>
             <a class="cta" href="contact.html"><button>Contact</button></a>
     </header>
+        <div class="parent">
+            <div class="economy">
+                <h2>Economy</h2>
+                <h3>$25</h3>
+                <img class="coach" src="CSS/Images/coaching-1.jpg" alt="Coaching">
+                <ul>
+                    <li>One hour of 1 on 1 training</li>
+                    <li>One hour of replay review</li>
+                    <li>Playlist of 20 training videos</li>
+                </ul>
+                <button class="flex-button">Save Money</button>
+            </div>
+            <div class="preferred">
+                <h2>Preferred</h2>
+                <h3>$40</h3>
+                <img class="coach" src="CSS/Images/coaching-2.jpg" alt="Coaching">
+                <ul>
+                    <li>Two hours of 1 on 1 training</li>
+                    <li>Two hours of replay review</li>
+                    <li>Playlist of 30 training videos</li>
+                </ul>
+                <button class="flex-button">Rival the Competitior</button>
+            </div>
+            <div class="premium">
+                <h2>Premium</h2>
+                <h3>$55</h3>
+                <img class="coach" src="CSS/Images/coaching-3.jpg" alt="Coaching">
+                <ul class="line-seperated">
+                    <li>Three hours of 1 on 1 training</li>
+                    <li>Three hours of replay review</li>
+                    <li>Full playlist of 50 training videos</li>
+                </ul>
+                <button class="flex-button">Become Inferior</button>
+            </div>
+        </div>
 </body>
 </html>
