--- a/contact.html
+++ b/contact.html
@@ -7,6 +7,7 @@
     <title>Contact</title>
     <link rel="stylesheet" href="CSS/style.css">
     <link rel="stylesheet" href="CSS/contact.css">
+    <link rel="icon shortcut" type="image/x-icon" href="Images/wrevor_badge_13.ico"/>
 </head>
 <body>
     <header>
