--- a/about.html
+++ b/about.html
@@ -27,7 +27,9 @@
         <div class="about-text">
             <h2 id="about-h2">Our Mission</h2>
             <h1 id="about-header">We want to help YOU improve at the games YOU love</h1>
-            <h3 id="about-h3">WeCoach is dedicated to helping players get better at video games and esports they love most</h3>
+            <h3 id="about-h3">WeCoach is dedicated to helping players get better at video games and 
+                <a id="esports" href="https://hir.harvard.edu/esports-part-1-what-are-esports/"
+                target="_blank">esports</a> they love most</h3>
             <a href="services.html"><button id="learn-more">Learn More</button></a>
         </div>
     </div>
