Worked on report

--- a/about.html
+++ b/about.html
@@ -33,6 +33,14 @@
             <a href="services.html"><button id="learn-more">Learn More</button></a>
         </div>
     </div>
+    <div class="supported-games">
+        <h1 id="support">Supported Games</h1>
+        <div class="games">
+            <img class="game-img" src="CSS/Images/rocket.jpg">
+            <img class="game-img" src="CSS/Images/league.jpg">
+            <img class="game-img" src="CSS/Images/fifa.jpg">
+        </div>
+    </div>
     
 </body>
 </html>
