Finished my itemized report

--- a/report.html
+++ b/report.html
@@ -5,8 +5,43 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Report</title>
+    <link rel="stylesheet" href="CSS/report.css">
 </head>
 <body>
-    <p>Does this work?</p>
+    <p>1. My theme is a esports and video game coaching site that serves anyone who wants a coach </p>
+    <p>2. My content is original, other than some images where I adhere to their license </p>
+    <p>3. My site has 5 seperate html pages... it has a home page (index), an about page, a services page,
+        a store-wide sale countdown page, and a contact page </p>
+    <p>4. My site has a nice dark grey header with the company logo linking to the home page</p>
+    <p>5. My site has nice navigation links in the header of my site, our logo links to the home pages
+        and a contact button on the far right side</p>
+    <p>6. I have modified each page to be able to support screens that have a max-width of 700px through media
+        queries, if the screen is bigger than 700px, it should work just fine with my standard html code</p>
+    <p>7. I have a stylesheet called style.css for my header and nav links across each page. I also have individual
+        CSS files for each individual page for custom formatting</p>
+    <p>8. My site includes images on the about page for supporting games and on my services page, I made sure to use alt
+        attributes to make sure I accurately describe each picture incase they cannot load</p>
+    <p>9. I made sure each of my pages have declared a favicon with our logo on it </p>
+    <p>10. I have put my Javascript, CSS and Images in seperate folders. I also have an images folder within CSS for images
+        that I modified within the CSS files to keep the images seperate </p>
+    <p>11. I have no used any libraries or frameworks, m code consist of just Javascript, CSS, and HTML </p>
+    <p>12. All of my content of my site validates without any warnings or errors </p>
+    <p>13. My content is neatly aligned although most of my pages used center alignment because of the formatting
+        I was trying to acheive </p>    
+    <p>14. None of my text bleeds against the containing box, I believe it had adequate spacing</p>
+    <p>15. I used atleast 2 different font faces, most of my pages use the same but services.html looked better using
+        a different font style</p>
+    <p>16. My site has a contact form which is for anyone to contact us with more information</p>
+    <p>17. My site uses external links to inform our viewers on what esports is, we linked the harvard esports page</p>
+    <p>18. I modified all of my classes and id's to use kebab-case over camelCase</p>
+    <p>19. I have atleast 2 animations, I used javascript to create a countdown timer that lets us know how much longer
+        until our store wide sale. I also used a hover transition animation in my services to make them pop out more.</p>
+    <p>20. I made twodee a collaborater of my project so you could see all of my code used for the site</p>
+    <p>21. All of my files are fully lowercase and they only contain alphanumeric characters</p>
+    <p>22. My site is avalible at both http and https</p>
+    <p>23. My site has been served over HTTPS on port 443 and I did use the Let's Encrypt free certificate </p>
+    <p>24. My site redirects if you try to access it from port 80</p>
+    <p>25. I have had a steady flow of work throughout the project and havent just pushed all the content on the last day</p>
+    <p>26. This is my report for everything</p>
 </body>
 </html>
