Fixed my images, finished report +  media queries

--- a/about.html
+++ b/about.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="CSS/style.css">
     <link rel="stylesheet" href="CSS/about.css">
     <link rel="icon shortcut" type="image/x-icon" href="Images/wrevor_badge_13.ico"/>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <body>
     <header>
@@ -33,12 +34,29 @@
             <a href="services.html"><button id="learn-more">Learn More</button></a>
         </div>
     </div>
+    <div class="statement">
+        <h1 id="statement-title">We want to help improve gaming experiences by unlocking potential</h1>
+        <p id="statement-para">Every player has a unique set of objectives they try to accomplish when they play games.
+            Some of these players have plans to go pro, while other might just simply enjoy the journey
+            of progress within their game. We wanted to create the best learning platform for our students
+            by maximising the gaming experience. We have coaches that have been 5+ years experience coaching
+            in each of our supported games.
+        </p>
+        <div class="rating">
+            <span class="fa fa-star checked"></span>
+            <span class="fa fa-star checked"></span>
+            <span class="fa fa-star checked"></span>
+            <span class="fa fa-star checked"></span>
+            <span class="fa fa-star checked"></span>
+        </div>
+        <h2 id="loved">Loved since 2021</h2>
+    </div>
     <div class="supported-games">
         <h1 id="support">Supported Games</h1>
         <div class="games">
-            <img class="game-img" src="CSS/Images/rocket.jpg">
-            <img class="game-img" src="CSS/Images/league.jpg">
-            <img class="game-img" src="CSS/Images/fifa.jpg">
+            <img class="game-img" src="Images/rocket.jpg">
+            <img class="game-img" src="Images/league.jpg">
+            <img class="game-img" src="Images/fifa.jpg">
         </div>
     </div>
     
