--- a/services.html
+++ b/services.html
@@ -27,7 +27,7 @@
             <div class="economy">
                 <h2>Economy</h2>
                 <h3>$25</h3>
-                <img class="coach" src="CSS/Images/coaching-1.jpg" alt="Coaching">
+                <img class="coach" src="Images/coaching-1.jpg" alt="Coaching">
                 <ul>
                     <li>One hour of 1 on 1 training</li>
                     <li>One hour of replay review</li>
@@ -38,7 +38,7 @@
             <div class="preferred">
                 <h2>Preferred</h2>
                 <h3>$40</h3>
-                <img class="coach" src="CSS/Images/coaching-2.jpg" alt="Coaching">
+                <img class="coach" src="Images/coaching-2.jpg" alt="Coaching">
                 <ul>
                     <li>Two hours of 1 on 1 training</li>
                     <li>Two hours of replay review</li>
@@ -49,7 +49,7 @@
             <div class="premium">
                 <h2>Premium</h2>
                 <h3>$55</h3>
-                <img class="coach" src="CSS/Images/coaching-3.jpg" alt="Coaching">
+                <img class="coach" src="Images/coaching-3.png" alt="Coaching">
                 <ul class="line-seperated">
                     <li>Three hours of 1 on 1 training</li>
                     <li>Three hours of replay review</li>
