--- a/report.html
+++ b/report.html
@@ -16,15 +16,16 @@
     <p>5. My site has nice navigation links in the header of my site, our logo links to the home pages
         and a contact button on the far right side</p>
     <p>6. I have modified each page to be able to support screens that have a max-width of 700px through media
-        queries, if the screen is bigger than 700px, it should work just fine with my standard html code</p>
+        queries and some pages to support 500px where they looked really bad, if the screen is bigger than 500px, 
+        it should work just fine with my standard html code</p>
     <p>7. I have a stylesheet called style.css for my header and nav links across each page. I also have individual
         CSS files for each individual page for custom formatting</p>
     <p>8. My site includes images on the about page for supporting games and on my services page, I made sure to use alt
         attributes to make sure I accurately describe each picture incase they cannot load</p>
     <p>9. I made sure each of my pages have declared a favicon with our logo on it </p>
-    <p>10. I have put my Javascript, CSS and Images in seperate folders. I also have an images folder within CSS for images
-        that I modified within the CSS files to keep the images seperate </p>
-    <p>11. I have no used any libraries or frameworks, m code consist of just Javascript, CSS, and HTML </p>
+    <p>10. I have put my Javascript, CSS and Images in seperate folders. I kept my html outside of any folders other than
+        the main project folder because it specified non-html code </p>
+    <p>11. I have no used any libraries or frameworks, my code consists of just Javascript, CSS, and HTML </p>
     <p>12. All of my content of my site validates without any warnings or errors </p>
     <p>13. My content is neatly aligned although most of my pages used center alignment because of the formatting
         I was trying to acheive </p>    
