Fixed Nu HTML Checks other than button

--- a/about.html
+++ b/about.html
@@ -54,9 +54,9 @@
     <div class="supported-games">
         <h1 id="support">Supported Games</h1>
         <div class="games">
-            <img class="game-img" src="Images/rocket.jpg">
-            <img class="game-img" src="Images/league.jpg">
-            <img class="game-img" src="Images/fifa.jpg">
+            <img class="game-img" src="Images/rocket.jpg" alt="Rocket League">
+            <img class="game-img" src="Images/league.jpg" alt="League of Legends">
+            <img class="game-img" src="Images/fifa.jpg" alt="Fifa 22">
         </div>
     </div>
     
