--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                     <li><a href="countdown.html">Countdown</a></li>
                 </ul>
             </nav>
-            <a class="cta" href="contact.html"><button>Contact</button></a>
+            <button class="cta">Contact<a href="contact.html"></a></button>
     </header>
     <div class="main-background">
         <div class="main-text">
