--- a/countdown.html
+++ b/countdown.html
@@ -7,7 +7,7 @@
     <title>Countdown</title>
     <link rel="stylesheet" href="CSS/style.css">
     <link rel="stylesheet" href="CSS/countdown.css">
-    <script src="Javascript/cdscript.js"defer></script> </script>
+    <script src="Javascript/cdscript.js" defer></script>
     <link rel="icon shortcut" type="image/x-icon" href="Images/wrevor_badge_13.ico"/>
 </head>
 <body>
