Fixed all Nu HTML Check Errors

--- a/about.html
+++ b/about.html
@@ -22,7 +22,7 @@
                     <li><a href="countdown.html">Countdown</a></li>
                 </ul>
             </nav>
-            <a class="cta" href="contact.html"><button>Contact</button></a>
+            <a class="cta" href="contact.html">Contact</a>
     </header>
     <div class="about-background">
         <div class="about-text">
