--- a/services.html
+++ b/services.html
@@ -21,7 +21,7 @@
                     <li><a href="countdown.html">Countdown</a></li>
                 </ul>
             </nav>
-            <a class="cta" href="contact.html"><button>Contact</button></a>
+            <a class="cta" href="contact.html">Contact</a>
     </header>
         <div class="parent">
             <div class="economy">
