Fixed Button Errors

--- a/about.html
+++ b/about.html
@@ -31,7 +31,7 @@
             <h3 id="about-h3">WeCoach is dedicated to helping players get better at video games and 
                 <a id="esports" href="https://hir.harvard.edu/esports-part-1-what-are-esports/"
                 target="_blank">esports</a> they love most</h3>
-            <a href="services.html"><button id="learn-more">Our Services</button></a>
+            <a id="learn-more" href="services.html">Our Services</a>
         </div>
     </div>
     <div class="statement">
