Fixed button errors

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <div class="main-text">
             <h1 id="home-header">Welcome to WeCoach</h1>
             <h3 id="home-subheader">Unlock your true potential in the games you love most</h3>
-            <a id="start" href="about.html">Get Started</a>
+            <a type="button" id="start" href="about.html">Get Started</a>
         </div>
     </div>
 
