Finalized based off Peer Reviews

--- a/services.html
+++ b/services.html
@@ -55,7 +55,7 @@
                     <li>Three hours of replay review</li>
                     <li>Full playlist of 50 training videos</li>
                 </ul>
-                <button class="flex-button">Become Inferior</button>
+                <button class="flex-button">Become Superior</button>
             </div>
         </div>
 </body>
